--- a/google.html
+++ b/google.html
@@ -64,7 +64,7 @@
 </div>
 </header>
 
-<mean>
+<main>
   <section>
   <div class="logo">
     <img src="img/g.png" title="Google" alt="Google">
@@ -80,7 +80,7 @@
      <input class="btn-lucky" type="button" value="Мне повезёт!">
    </div>
  </section>
-</mean>
+</main>
 
   <footer>
     <nav class="footer-menu1">
