--- a/google.html
+++ b/google.html
@@ -71,8 +71,30 @@
   </div>
     <div class="box" >
       <div class="search-google">
-          <a href="#" class="search-google-icon keyboard" title="Экранная клавиатура"></a>
-        <a href="#" class="search-google-icon microphono" title="Голосовой поиск"></a>
+          <a href="#" class="search-google-icon keyboard" title="Экранная клавиатура">
+            <svg width="35px" height="30px">
+              <rect width="25px" height="15px" rx="1px" fill="black"/>
+              <rect width="1px" height="1px" x="4px" y="3px" fill="white"/>
+              <rect width="1px" height="1px" x="7px" y="3px" fill="white"/>
+              <rect width="1px" height="1px" x="10px" y="3px" fill="white"/>
+              <rect width="1px" height="1px" x="13px" y="3px" fill="white"/>
+              <rect width="1px" height="1px" x="16px" y="3px" fill="white"/>
+              <rect width="1px" height="1px" x="19px" y="3px" fill="white"/>
+              <rect width="1px" height="1px" x="4px" y="5px" fill="white"/>
+              <rect width="1px" height="1px" x="7px" y="5px" fill="white"/>
+              <rect width="1px" height="1px" x="10px" y="5px" fill="white"/>
+              <rect width="1px" height="1px" x="13px" y="5px" fill="white"/>
+              <rect width="1px" height="1px" x="16px" y="5px" fill="white"/>
+              <rect width="1px" height="1px" x="19px" y="5px" fill="white"/>
+              <rect width="1px" height="1px" x="4px" y="7px" fill="white"/>
+              <rect width="1px" height="1px" x="7px" y="7px" fill="white"/>
+              <rect width="1px" height="1px" x="10px" y="7px" fill="white"/>
+              <rect width="1px" height="1px" x="13px" y="7px" fill="white"/>
+              <rect width="1px" height="1px" x="16px" y="7px" fill="white"/>
+              <rect width="1px" height="1px" x="19px" y="7px" fill="white"/>
+              <rect width="11px" height="1px" x="7px" y="11px" fill="white"/>
+            </svg>
+          </a>
        <input class="icon-box" type="search" name="search"  title="Поиск" >
      </div>
     <br>
